# LoggingSystem

./: .gitignore  Build.sh  CMakeLists.txt  Install.sh  LICENSE  PrepareBuild.sh
CMakeUtils/: AddFile.cmake
Development/: FindLoggingSystem.cmake
Development/NixOS/: EnterDevShell.sh  OpenQtCreator.sh  shell.nix
Src/: lsConsoleOutput.cpp  lsConsoleOutput.hpp  lsIOutput.hpp  lsLogger.cpp  lsLogger.hpp  lsTextFileOutput.cpp  lsTextFileOutput.hpp
Tests/: CMakeLists.txt
Tests/ConsoleOutput/: CMakeLists.txt
Tests/ConsoleOutput/ConsoleOutput-CustomWriteCallbacks/: CMakeLists.txt  RunTest.cmake
Tests/ConsoleOutput/ConsoleOutput-CustomWriteCallbacks/Src/: Main.cpp
Tests/ConsoleOutput/ConsoleOutput-SetGetData/: CMakeLists.txt
Tests/ConsoleOutput/ConsoleOutput-SetGetData/Src/: Main.cpp
Tests/ConsoleOutput/ConsoleOutput-WriteMessages/: CMakeLists.txt
Tests/ConsoleOutput/ConsoleOutput-WriteMessages/Src/: Main.cpp
Tests/ConsoleOutput/Src/: Main.cpp
Tests/OutputsHaveCorrectMessageTypes/: CMakeLists.txt
Tests/OutputsHaveCorrectMessageTypes/Src/: Main.cpp
Tests/RunSmokeTest/: CMakeLists.txt  RunTest.cmake
Tests/RunSmokeTest/Src/: Main.cpp
Tests/TextFileOutput/: CMakeLists.txt
Tests/TextFileOutput/TextFileOutput-AppendFile/: CMakeLists.txt  RunTest.cmake
Tests/TextFileOutput/TextFileOutput-AppendFile/Src/: Main.cpp
Tests/TextFileOutput/TextFileOutput-CustomWriteCallbacks/: CMakeLists.txt
Tests/TextFileOutput/TextFileOutput-CustomWriteCallbacks/Src/: Main.cpp
Tests/TextFileOutput/TextFileOutput-NewOrOverwriteFile/: CMakeLists.txt  RunTest.cmake
Tests/TextFileOutput/TextFileOutput-NewOrOverwriteFile/Src/: Main.cpp
Tests/TextFileOutput/TextFileOutput-SetGetData/: CMakeLists.txt
Tests/TextFileOutput/TextFileOutput-SetGetData/Src/: Main.cpp
Tests/TextFileOutput/TextFileOutput-WriteMessages/: CMakeLists.txt  RunTest.cmake
Tests/TextFileOutput/TextFileOutput-WriteMessages/Src/: Main.cpp
