include(../../../CMakeUtils/AddFile.cmake)

AddFile(TEST_SOURCE_FILES Src Src/Main.cpp)
AddFile(TEST_CMAKE_FILES "" RunTest.cmake)

set(TEST_EXECUTABLE_NAME ConsoleOutput-SetGetData)

add_executable(${TEST_EXECUTABLE_NAME} ${TEST_SOURCE_FILES} ${TEST_CMAKE_FILES})
target_link_libraries(${TEST_EXECUTABLE_NAME} ${LOGGING_SYSTEM_TARGET_NAME})
target_include_directories(${TEST_EXECUTABLE_NAME} PRIVATE ${LOGGING_SYSTEM_INCLUDE_DIRS})
target_compile_features(${CMAKE_PROJECT_NAME} PUBLIC cxx_std_11)

add_test(NAME ${TEST_EXECUTABLE_NAME} COMMAND ${CMAKE_COMMAND}
    -DTEST_EXECUTABLE_PATH=${CMAKE_CURRENT_BINARY_DIR}/${TEST_EXECUTABLE_NAME}
    -DTEST_EXECUTABLE_DIR_PATH=${CMAKE_CURRENT_BINARY_DIR}
    -P ${CMAKE_CURRENT_SOURCE_DIR}/RunTest.cmake)
